[metadata]
name = trulens_viz
version = 0.0.1
author = Andreas Paepcke
author_email = paepcke@cs.stanford.edu
description = Experimental NLP attribution strength visualization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paepcke/trulens_viz.git
#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues

[options]

# Empty key in package_dir specifies root of packages;
# value is relative to proj root:

package_dir=
    = src

# Find the packages to include in distributions
# (that's different from the dependencies):
packages=find:

install_requires = 
                  domonic>=0.9.10
                  matplotlib>=3.5.1
                  numpy>=1.22.3

python_requires = >=3.6

[options.extras_require]

test = nose2>=0.9.2

[options.packages.find]
where = src
